--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint ./src",
+    "lint-fix": "eslint ./src --fix"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.14",
